Adding background colour option

--- a/src/options.html
+++ b/src/options.html
@@ -5,6 +5,7 @@
 <body onload="restore_options()">
 
 <p><label for="show-transparency-default"><input type="checkbox" id="show-transparency-default"> Show transparency by default</label>
+<p><label for="background-colour">Background colour <input type="color" id="background-colour"></label>
 
 <p><button onclick="save_options()">Save</button></p>
 
